<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal">

  <Button android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:id="@+id/lockButton"
          android:text="@string/lock"/>

  <Button android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/unlockButton"
          android:layout_marginTop="10dp"
          android:text="@string/unlock"/>

  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/select_string"
            android:gravity="center_horizontal"
            android:id="@+id/selectTextView"
            android:visibility="gone"/>

  <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                          android:layout_height="match_parent"
                                          android:id="@+id/rvEmployeeList"
                                          android:layout_marginTop="10dp"></androidx.recyclerview.widget.RecyclerView>

</LinearLayout>