<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/app_event_name"
      android:id="@+id/app_event_text"/>

  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/payload"
      android:id="@+id/payload_text"/>

  <Spinner
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:entries="@array/connection_type"
      android:id="@+id/connection_type_spinner"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/send_button"
      android:text="@string/send_app_notification"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/log_text"/>
  </ScrollView>
</LinearLayout>