<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center">

  <ProgressBar
    android:id="@+id/progress_bar"
    style="@android:style/Widget.Holo.ProgressBar.Large"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="visible" />


  <LinearLayout
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp"
    android:orientation="vertical"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:id="@+id/this_device_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:text="@string/this_device"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp">

      <TextView
          android:id="@+id/serial_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Serial:"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/model_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Model:"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/serial_label" />

      <TextView
          android:id="@+id/name_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Name:"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/model_label" />

      <TextView
          android:id="@+id/sim_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="SIM ICC ID:"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/name_label" />

      <androidx.constraintlayout.widget.Barrier
          android:id="@+id/barrier"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:barrierDirection="end"
          app:constraint_referenced_ids="serial_label,model_label,name_label,sim_label" />

      <TextView
          android:id="@+id/this_serial"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          app:layout_constraintBaseline_toBaselineOf="@id/serial_label"
          app:layout_constraintStart_toEndOf="@id/barrier"
          tools:text="C04312345678" />

      <TextView
          android:id="@+id/this_model"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          app:layout_constraintBaseline_toBaselineOf="@id/model_label"
          app:layout_constraintStart_toEndOf="@id/barrier"
          tools:text="C403" />

      <TextView
          android:id="@+id/this_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          app:layout_constraintBaseline_toBaselineOf="@id/name_label"
          app:layout_constraintStart_toEndOf="@id/barrier"
          tools:text="Clover Flex 4" />

      <TextView
          android:id="@+id/this_simm_icc_id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          app:layout_constraintBaseline_toBaselineOf="@id/sim_label"
          app:layout_constraintStart_toEndOf="@id/barrier"
          tools:text="12345678901234567890" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <Button
          android:id="@+id/reboot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Reboot" />

      <CheckBox
          android:id="@+id/reboot_now"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Reboot now" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/name_label"
        android:textStyle="bold" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/model_label"
        android:textStyle="bold" />

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/id_label"
        android:textStyle="bold" />
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@android:color/black" />

    <ListView
      android:id="@+id/list_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fadingEdgeLength="4dp"
      android:footerDividersEnabled="false"
      android:requiresFadingEdge="vertical" />

    <ProgressBar
      android:id="@+id/list_view_empty"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:visibility="gone" />
  </LinearLayout>
</FrameLayout>